@@ -20,6 +20,8 @@ config BR2_armeb
 	bool "armeb"
 config BR2_avr32
 	bool "avr32"
+config BR2_bfin
+	bool "blackfin"
 config BR2_cris
 	bool "cris"
 config BR2_i386
@@ -181,6 +183,7 @@ config BR2_ARCH
 	default "arm"		if BR2_arm
 	default "armeb"		if BR2_armeb
 	default "avr32"		if BR2_avr32
+	default "bfin"		if BR2_bfin
 	default "cris"		if BR2_cris
 	default "i386"		if BR2_x86_i386
 	default "i486"		if BR2_x86_i486
@@ -208,9 +211,9 @@ config BR2_ARCH
 
 config BR2_ENDIAN
 	string
-	default "LITTLE" if BR2_arm || BR2_cris || BR2_i386 || BR2_m32c || BR2_mipsel || \
-	                    BR2_sh3 || BR2_sh4 || BR2_x86_64 || BR2_nios2 || \
-			    BR2_sh64 || BR2_h8300
+	default "LITTLE" if BR2_arm || BR2_bfin || BR2_cris || BR2_i386 || BR2_m32c || \
+	                    BR2_mipsel || BR2_sh3 || BR2_sh4 || BR2_x86_64 || \
+			    BR2_nios2 || BR2_sh64 || BR2_h8300
 	default "BIG"    if BR2_alpha || BR2_armeb || BR2_avr32 || BR2_m68k || \
 			    BR2_m68hc11 || BR2_m68hc12 || BR2_mips || \
 	                    BR2_powerpc || BR2_sh1 || BR2_sh2a_nofpueb || BR2_sh2eb || \
