@@ -20,3 +20,5 @@ buildroot-0.1.3 2008-02-28 <spudmonkey@racsa.co.cr>
 
 buildroot-0.1.4 2008-xx-xx <spudmonkey@racsa.co.cr>
 
+	* Add support for a blackfin toolchain using GCC 4.2.4 and binutils 2.19
+
